varnish/tests/fail/error_obj_no_ctor.stderr
error: Object must have a constructor called `new`
 --> tests/fail/error_obj_no_ctor.rs:6:10
  |
6 |     impl ObjNoCtor {
  |          ^^^^^^^^^

error: No functions or objects found in this module
 --> tests/fail/error_obj_no_ctor.rs:3:1
  |
3 | #[varnish::vmod]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `varnish::vmod` (in Nightly builds, run with -Z macro-backtrace for more info)
